fixed biomaterials issue

--- a/src/main/resources/templates/PINK1PRKN14.html
+++ b/src/main/resources/templates/PINK1PRKN14.html
@@ -3239,84 +3239,84 @@ $("#backToLanding").click(function(){
 <script  type="text/javascript">
 function __main__() {
 //begin biom_urine_q
-//condition display only if "smaller amount collected" is checked in item "biom_urine"
+//condition display only if "Collected, unable to process/ship" is checked in item "biom_urine"
 if (length("biom_urine") > 0 ? isvisible("biom_urine", true) : false )  
-{ if (check("biom_urine","smaller amount collected"))  
+{ if (check("biom_urine","Collected, unable to process/ship"))  
  show("biom_urine_q",true,"null",null);  
 else hide("biom_urine_q",true);  
 } else { 
 if (isvisible2("biom_urine", false)) { 
- if (check2("biom_urine","smaller amount collected")) 
+ if (check2("biom_urine","Collected, unable to process/ship")) 
   show("biom_urine_q",false,"null",null); 
  else  hide("biom_urine_q",false); 
   } else hide("biom_urine_q",false); 
  } 
 //end biom_urine_q
 //begin biom_edta_q
-//condition display only if "smaller amount collected" is checked in item "biom_edta"
+//condition display only if "Collected, unable to process/ship" is checked in item "biom_edta"
 if (length("biom_edta") > 0 ? isvisible("biom_edta", true) : false )  
-{ if (check("biom_edta","smaller amount collected"))  
+{ if (check("biom_edta","Collected, unable to process/ship"))  
  show("biom_edta_q",true,"null",null);  
 else hide("biom_edta_q",true);  
 } else { 
 if (isvisible2("biom_edta", false)) { 
- if (check2("biom_edta","smaller amount collected")) 
+ if (check2("biom_edta","Collected, unable to process/ship")) 
   show("biom_edta_q",false,"null",null); 
  else  hide("biom_edta_q",false); 
   } else hide("biom_edta_q",false); 
  } 
 //end biom_edta_q
 //begin biom_plasma_q
-//condition display only if "smaller amount collected" is checked in item "biom_plasma"
+//condition display only if "Collected, unable to process/ship" is checked in item "biom_plasma"
 if (length("biom_plasma") > 0 ? isvisible("biom_plasma", true) : false )  
-{ if (check("biom_plasma","smaller amount collected"))  
+{ if (check("biom_plasma","Collected, unable to process/ship"))  
  show("biom_plasma_q",true,"null",null);  
 else hide("biom_plasma_q",true);  
 } else { 
 if (isvisible2("biom_plasma", false)) { 
- if (check2("biom_plasma","smaller amount collected")) 
+ if (check2("biom_plasma","Collected, unable to process/ship")) 
   show("biom_plasma_q",false,"null",null); 
  else  hide("biom_plasma_q",false); 
   } else hide("biom_plasma_q",false); 
  } 
 //end biom_plasma_q
 //begin biom_serum_q
-//condition display only if "smaller amount collected" is checked in item "biom_serum"
+//condition display only if "Collected, unable to process/ship" is checked in item "biom_serum"
 if (length("biom_serum") > 0 ? isvisible("biom_serum", true) : false )  
-{ if (check("biom_serum","smaller amount collected"))  
+{ if (check("biom_serum","Collected, unable to process/ship"))  
  show("biom_serum_q",true,"null",null);  
 else hide("biom_serum_q",true);  
 } else { 
 if (isvisible2("biom_serum", false)) { 
- if (check2("biom_serum","smaller amount collected")) 
+ if (check2("biom_serum","Collected, unable to process/ship")) 
   show("biom_serum_q",false,"null",null); 
  else  hide("biom_serum_q",false); 
   } else hide("biom_serum_q",false); 
  } 
 //end biom_serum_q
 //begin biom_pax_q
-//condition display only if "smaller amount collected" is checked in item "biom_pax"
+//condition display only if "Collected, unable to process/ship" is checked in item "biom_pax"
 if (length("biom_pax") > 0 ? isvisible("biom_pax", true) : false )  
-{ if (check("biom_pax","smaller amount collected"))  
+{ if (check("biom_pax","Collected, unable to process/ship"))  
  show("biom_pax_q",true,"null",null);  
 else hide("biom_pax_q",true);  
 } else { 
 if (isvisible2("biom_pax", false)) { 
- if (check2("biom_pax","smaller amount collected")) 
+ if (check2("biom_pax","Collected, unable to process/ship")) 
   show("biom_pax_q",false,"null",null); 
  else  hide("biom_pax_q",false); 
   } else hide("biom_pax_q",false); 
  } 
 //end biom_pax_q
 //begin biom_pbmcs_q
-//condition display only if "smaller amount collected" is checked in item "biom_pbmcs"
+//condition display only if "Collected, unable to process/ship" is checked in item "biom_pbmcs"
 if (length("biom_pbmcs") > 0 ? isvisible("biom_pbmcs", true) : false )  
-{ if (check("biom_pbmcs","smaller amount collected"))  
+{ if (check("biom_pbmcs","Collected, unable to process/ship"))  
  show("biom_pbmcs_q",true,"null",null);  
 else hide("biom_pbmcs_q",true);  
 } else { 
 if (isvisible2("biom_pbmcs", false)) { 
- if (check2("biom_pbmcs","smaller amount collected")) 
+ if (check2("biom_pbmcs","Collected, unable to process/ship")) 
   show("biom_pbmcs_q",false,"null",null); 
  else  hide("biom_pbmcs_q",false); 
   } else hide("biom_pbmcs_q",false); 
@@ -3325,72 +3325,72 @@ if (isvisible2("biom_pbmcs", false)) {
 minimum_part_filled_out();
     } __main__(); 
 $('#biom_urine,input[name="biom_urine"]').on('change', function() {if (length("biom_urine") > 0 ? isvisible("biom_urine", true) : false )  
-{ if (check("biom_urine","smaller amount collected"))  
+{ if (check("biom_urine","Collected, unable to process/ship"))  
  show("biom_urine_q",true,"null",null);  
 else hide("biom_urine_q",true);  
 } else { 
 if (isvisible2("biom_urine", false)) { 
- if (check2("biom_urine","smaller amount collected")) 
+ if (check2("biom_urine","Collected, unable to process/ship")) 
   show("biom_urine_q",false,"null",null); 
  else  hide("biom_urine_q",false); 
   } else hide("biom_urine_q",false); 
  } 
 });
 $('#biom_pax,input[name="biom_pax"]').on('change', function() {if (length("biom_pax") > 0 ? isvisible("biom_pax", true) : false )  
-{ if (check("biom_pax","smaller amount collected"))  
+{ if (check("biom_pax","Collected, unable to process/ship"))  
  show("biom_pax_q",true,"null",null);  
 else hide("biom_pax_q",true);  
 } else { 
 if (isvisible2("biom_pax", false)) { 
- if (check2("biom_pax","smaller amount collected")) 
+ if (check2("biom_pax","Collected, unable to process/ship")) 
   show("biom_pax_q",false,"null",null); 
  else  hide("biom_pax_q",false); 
   } else hide("biom_pax_q",false); 
  } 
 });
 $('#biom_serum,input[name="biom_serum"]').on('change', function() {if (length("biom_serum") > 0 ? isvisible("biom_serum", true) : false )  
-{ if (check("biom_serum","smaller amount collected"))  
+{ if (check("biom_serum","Collected, unable to process/ship"))  
  show("biom_serum_q",true,"null",null);  
 else hide("biom_serum_q",true);  
 } else { 
 if (isvisible2("biom_serum", false)) { 
- if (check2("biom_serum","smaller amount collected")) 
+ if (check2("biom_serum","Collected, unable to process/ship")) 
   show("biom_serum_q",false,"null",null); 
  else  hide("biom_serum_q",false); 
   } else hide("biom_serum_q",false); 
  } 
 });
 $('#biom_plasma,input[name="biom_plasma"]').on('change', function() {if (length("biom_plasma") > 0 ? isvisible("biom_plasma", true) : false )  
-{ if (check("biom_plasma","smaller amount collected"))  
+{ if (check("biom_plasma","Collected, unable to process/ship"))  
  show("biom_plasma_q",true,"null",null);  
 else hide("biom_plasma_q",true);  
 } else { 
 if (isvisible2("biom_plasma", false)) { 
- if (check2("biom_plasma","smaller amount collected")) 
+ if (check2("biom_plasma","Collected, unable to process/ship")) 
   show("biom_plasma_q",false,"null",null); 
  else  hide("biom_plasma_q",false); 
   } else hide("biom_plasma_q",false); 
  } 
 });
 $('#biom_pbmcs,input[name="biom_pbmcs"]').on('change', function() {if (length("biom_pbmcs") > 0 ? isvisible("biom_pbmcs", true) : false )  
-{ if (check("biom_pbmcs","smaller amount collected"))  
+{ if (check("biom_pbmcs","Collected, unable to process/ship"))  
  show("biom_pbmcs_q",true,"null",null);  
 else hide("biom_pbmcs_q",true);  
 } else { 
 if (isvisible2("biom_pbmcs", false)) { 
- if (check2("biom_pbmcs","smaller amount collected")) 
+ if (check2("biom_pbmcs","Collected, unable to process/ship")) 
   show("biom_pbmcs_q",false,"null",null); 
  else  hide("biom_pbmcs_q",false); 
   } else hide("biom_pbmcs_q",false); 
  } 
 });
 $('#biom_edta,input[name="biom_edta"]').on('change', function() {if (length("biom_edta") > 0 ? isvisible("biom_edta", true) : false )  
-{ if (check("biom_edta","smaller amount collected"))  
+{ if (check("biom_edta","Collected, unable to process/ship"))  
  show("biom_edta_q",true,"null",null);  
 else hide("biom_edta_q",true);  
 } else { 
 if (isvisible2("biom_edta", false)) { 
- if (check2("biom_edta","smaller amount collected")) 
+ if (check2("biom_edta","Collected, unable to process/ship")) 
   show("biom_edta_q",false,"null",null); 
  else  hide("biom_edta_q",false); 
   } else hide("biom_edta_q",false); 
