fixed for using only username and password

--- a/src/main/resources/templates/user/sign_in.html
+++ b/src/main/resources/templates/user/sign_in.html
@@ -79,7 +79,7 @@
 			<div class="small-12 columns">
             <label for="user_email">Email</label>
             <input
-              type="email"
+              type="text"
               id="user_email"
               th:field="*{username}"
               required="required"
