Added users management

--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -63,6 +63,32 @@
         font-size: 0.875rem;
         margin-top: 0.5rem;
       }
+      .password-requirements {
+        font-size: 0.875rem;
+        margin: 0.5rem 0;
+        color: #666;
+      }
+      .requirement {
+        margin: 0.2rem 0;
+      }
+      .requirement.met {
+        color: #28a745;
+      }
+      .requirement.unmet {
+        color: #ac202d;
+      }
+      .requirement::before {
+        content: '•';
+        margin-right: 0.5rem;
+      }
+      .requirement.met::before {
+        content: '✓';
+        color: #28a745;
+      }
+      .requirement.unmet::before {
+        content: '×';
+        color: #ac202d;
+      }
     </style>
 </head>
 <body>
@@ -84,6 +110,21 @@
           <div class="small-12 columns">
             <label for="newPassword">New Password</label>
             <input type="password" id="newPassword" required="required" th:field="*{newPassword}" />
+            <div class="password-requirements">
+              <div class="requirement" id="length">Length: 12-16 characters</div>
+              <div class="requirement" id="uppercase">Contains uppercase letter</div>
+              <div class="requirement" id="lowercase">Contains lowercase letter</div>
+              <div class="requirement" id="number">Contains number</div>
+              <div class="requirement" id="special">Contains special character (!@#$%^*-_)</div>
+            </div>
+            <div class="password-examples">
+              <small>Examples of good passwords:</small>
+              <ul>
+                <li><small>MedicaL-2024!</small></li>
+                <li><small>Clinic-Doctor42!</small></li>
+                <li><small>Puls@Med-357</small></li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="row">
@@ -106,5 +147,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.6.3/js/foundation.min.js"></script>
+    <script th:src="@{/js/password-validation.js}"></script>
 </body>
 </html>
